--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "A dictionary of James Joyce's word coinages, at joycewords.com.",
   "main": ".eleventy.js",
   "dependencies": {
+    "@11ty/eleventy": "^0.5.4",
     "bulma": "^0.7.2",
     "js-yaml": "^3.12.0",
     "spectre.css": "^0.5.6"
